# sps-genai

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  train_cnn.py
app/: bigram_model.py  embedding_model.py
helper_lib/: checkpoints.py  data_loader.py  evaluator.py  model.py  trainer.py
